simplq/src/styles/homePage.module.scss
@import 'utils';

.landing-page {
  min-height: 100vh;
  padding-top: 5vh; // Extra padding as placeholder for navbar
  margin: 0 1rem;
  display: flex;
  flex-direction: column;
  .main-header {
    @include standard-header();
    font-family: $header-font;
    font-size: 5rem;
  }
  .subtitle {
    @include center-horizontally();
    @include text-color();
    font-weight: 800;
    margin: 1rem;
    font-size: x-large;
  }
  .description {
    @include center-horizontally();
    @include text-color();
    margin-bottom: 4rem;
    font-size: larger;
  }
  .create-join-form {
    margin: auto; // centering
    max-width: 35rem;
    position: relative;
    // z-index set greater than that of svg below,
    // otherwise button becomes unclicable on wider screens
    z-index: 3;
    .button-group {
      @include center-horizontally();
      flex-wrap: wrap;
      button {
        margin: 0.5rem 2rem;
        min-width: 10rem;
      }
    }
    .input-box {
      min-height: 5rem;
    }
  }
  svg {
    // z-index set to lover value than upper create-join-form
    z-index: 2;
    // global margin of 1 rem set. Setting negative margin to fill till the edge
    margin: 0 -1rem;
  }
}

.benefits-info {
  @include background-color();
  @include text-color();
  @include center-vertically();
  @include center-horizontally();
  padding-bottom: 5rem;
  h2 {
    @include standard-header();
    font-family: $header-font;
    font-size: 2rem;
  }
  .benefits-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    .benefit {
      background-color: #6c63ff29;
      border: 0.15rem solid #70707073;
      border-radius: 0.5rem;
      height: 16rem;
      width: 16rem;
      padding: 2rem;
      margin: 2rem;
      img {
        height: 8rem;
        width: 10rem;
      }
      p {
        font-weight: 600;
      }
    }
  }
  // Position needs to be set for parent so that corona particles can be
  // positioned absolute to this div
  position: relative;
  .corona-1 {
    height: 7rem;
    position: absolute;
    top: 0rem;
    right: 15vw;
  }
  .corona-2 {
    height: 3rem;
    position: absolute;
    left: 6rem;
  }
  .corona-3 {
    height: 2rem;
    position: absolute;
    bottom: 2rem;
  }
}

.slider {
  @include text-color();
  @include center-vertically();
  @include center-horizontally();
  margin: 2.5rem;
}

.extra-info {
  background-color: $primary-color-dark;
  padding: 3rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  text-align: center;
  align-items: flex-start;

  .card {
    padding: 0.5rem;
    max-height: 16rem;
    max-width: 16rem;
  }

  img {
    width: 20%;
    height: 20%;
  }

  .brief-description {
    font-weight: bold;
    color: white;
    text-transform: capitalize;
  }

  .detailed-description {
    color: white;
    vertical-align: top;
    font-size: small;
  }
}

.burger{
  width: 2rem;
  height: 2rem;
  position: fixed;
  top: .2rem;
  right: 1rem;
  z-index: 5;
  display: none;
  @media (max-width: 768px) {
    display: flex;
    justify-content: space-around;
    flex-flow: column nowrap;
  }
  div {
    width: 2rem;
    height: 0.25rem;
    background-color: #fff;
    border-radius: .5rem;
    transform-origin: 1px;
    transition: all 0.3s linear;
  
    &:nth-child(1) {
      $type: open;
      @if $type == open {
        transform: rotate(45deg);
      } @else{
          transform: rotate(0);
      }
    }
    &:nth-child(2) {
      $type: open;
      @if $type == open {
        transform: translateX(100%);
      } @else{
          transform: translateX(0);
      }
    }
    &:nth-child(3) {
      $type: open;
      @if $type == open {
        transform: rotate(-45deg);
      } @else{
          transform: rotate(0);
      }
    }
  }
}


  .menu-list{
    list-style: none;
    display: flex;
    flex-flow: row nowrap;
    margin: 0;
    position: fixed;
    top: 1.2rem;
    li {
      color: #fff;
      padding: 0 2rem;
    }
    a{
      text-decoration: none;
      color: grey;
      cursor: auto;
    }
    @media (max-width: 768px) {
      flex-flow: column nowrap;
      background-color: #0D2538;
      position: fixed;
      top: 0;
      $type: open;
      @if $type == open {
        transform: translateX(0);
      } @else{
          transform: translateX(100%);
      }
      right: 0;
      height: 100vh;
      width: 25rem;
      padding-top: 3.5rem;
      transition: transform 0.3s ease-in-out;
  }
}


.navbar{
    width: 100%;
    height: 4rem;
    background-color: #fff;
    border-bottom: .2rem solid #f1f1f1;
    padding: 0 2rem;
    z-index: 5;
    justify-content: space-between;
    position: fixed;
    & > img {
      height: 3rem;
      width: 3rem;
      margin: .5rem;
   }
  }

